--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "async": "^0.9.0",
     "pty.js": "^0.2.4",
-    "events": "^1.0.2"
+    "events": "^1.0.2",
+    "process": "^0.9.0"
   }
 }
