--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "knowhow-shell",
   "version": "0.1.10",
-  "description": "An interpretter to run automated shell jobs",
+  "description": "An interpreter to run automated shell jobs",
   "main": "knowhow-shell.js",
   "directories": {
     "test": "test"
@@ -29,8 +29,9 @@
   "homepage": "https://github.com/jfelten/knowhow-shell",
   "dependencies": {
     "async": "^0.9.0",
-    "pty.js": "^0.2.4",
     "events": "^1.0.2",
-    "process": "^0.9.0"
+    "process": "^0.9.0",
+    "pty.js": "^0.2.4",
+    "underscore": "^1.7.0"
   }
 }
