--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "knowhow-shell",
   "version": "0.1.28",
   "description": "An interpreter to run automated shell jobs",
-  "engines" : { "node" : "<=0.10.3 >0.12" },
+  "engines" : { "node" : "<0.11.0 >0.12" },
   "main": "knowhow-shell.js",
   "os" : [ "darwin", "linux" ],
   "directories": {
